disable scrollbar for window to prevent flickering

--- a/assets/main.css
+++ b/assets/main.css
@@ -9,6 +9,7 @@ body {
   font-size: 14px;
   height: 100%;
   zoom: 1 !important;
+  overflow-y: hidden;
 }
 #ship-info {
   height: 100%;
